<resources>
    <string name="app_name">GoLailaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">lailahayatiamri@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create">Create New Account!</string>
    <string name="silahkan">Silahkan Login Untuk Memakai Aplikasi</string>
    <string name="sign_in">Sign in</string>
    <string name="img_logo">img_logo</string>
</resources>