<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:contentDescription="@string/img_logo"
            android:layout_marginBottom="110dp"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ImageView>

        <TextView
            android:id="@+id/tvSilahkan"
            android:layout_below="@id/ivLogo"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/medium"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textAlignment="center"
            android:text="@string/silahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/etUsername"
            android:autofillHints="@string/username"
            android:textAlignment="center"
            android:hint="@string/username"
            android:fontFamily="@font/medium"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:inputType="text"
            android:drawableStart="@drawable/ic_person"
            android:layout_below="@id/tvSilahkan"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content">

        </EditText>
        <EditText
            android:autofillHints="@string/password"
            android:id="@+id/etPassword"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:hint="@string/password"
            android:fontFamily="@font/medium"
            android:textStyle="bold"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:layout_below="@id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:id="@+id/btnLogin"
            android:hint="@string/sign_in"
            android:textColorHint="#ffff"
            android:fontFamily="@font/medium"
            android:textStyle="bold"
            android:textSize="16dp"
            android:background="@drawable/btn_sign_in"
            android:foreground="@drawable/btn_sign_in"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCreate"
            android:text="@string/create"
            android:fontFamily="@font/medium"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </RelativeLayout>

</LinearLayout>